clang/test/BSC/Negative/Generic/StructAndFunction/undefined_member_call/undefined_member_call.cbs
// RUN: %clang_cc1 -verify %s

struct S<T>{
  T a;
};

void test() {
  struct S<int> s1;
  int a = s1.x;    // expected-error {{no member named 'x' in 'struct S<int>'}}
}